added social icons and finished markup

--- a/index.html
+++ b/index.html
@@ -4,23 +4,36 @@
 	   <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <title>Wolf Creek Boys</title>
      <link rel="stylesheet" type="text/css" href="style.css">
-
+     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
+     integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+     crossorigin="anonymous"></script>
    </head>
 
 <body>
-<head>
+<header>
   <h1>Wolf Creek Boys</h1>
   <nav>
+<div>
+  <ul>
+    <li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+    <li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
+    <li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
+  </ul>
+</div>
+
+    <div>
     <ul>
-      <li>Music</li>
-      <li>Videos</li>
-      <li>Bio</li>
-      <li>Tour</li>
+      <li><a href = "#">Music</a></li>
+      <li><a href = "#">Videos</a></li>
+      <li><a href = "#">About</a></li>
+      <li><a href = "#">Tour</a></li>
     </ul>
+  </div>
    </nav>
-</head>
+</header>
 
 <div class = "portion" id = "music">
+
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/340929466&color=%23ff5500&auto
  _play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
@@ -42,7 +55,8 @@
   picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<div class = "portion" id = "bio">
+<div class = "portion" id = "about">
+  <h2>Our Story</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -50,29 +64,46 @@
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<p></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<p></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
-<div class = "portion" id = "news">
+<div>
 
 </div>
 
-<div class = "portion" id = "merch">
-
+<div>
+  <ul>
+    <li><a href = "#">Music</a></li>
+    <li><a href = "#">Videos</a></li>
+    <li><a href = "#">About</a></li>
+    <li><a href = "#">Tour</a></li>
+  </ul>
 </div>
 
 <footer>
 <ul>
-<li></li>
-<li></li>
-<li></li>
+<li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+<li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
+<li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
 </ul>
+<p>Contact info: wolfcreekboys@gmail.com</p>
+
 </footer>
 
 <footer>
-<p> Adam R. Lee Design
+<p> Adam R. Lee Design </p>
 </footer>
 
 
