--- a/index.html
+++ b/index.html
@@ -15,32 +15,64 @@
   <nav>
 <div>
   <ul>
-    <li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
-    <li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
-    <li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
+    <li><a href = "#">Music</a></li>
+    <li><a href = "#">Videos</a></li>
+    <li><a href = "#">About</a></li>
+    <li><a href = "#">Tour</a></li>
   </ul>
 </div>
 
     <div>
     <ul>
-      <li><a href = "#">Music</a></li>
-      <li><a href = "#">Videos</a></li>
-      <li><a href = "#">About</a></li>
-      <li><a href = "#">Tour</a></li>
+      <li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+      <li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
+      <li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
     </ul>
   </div>
    </nav>
 </header>
-
+<div class = "landing">
+<h1>Wolf Creek Boys</h1>
+</div>
 <div class = "portion" id = "music">
 
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+<iframe width="50%" height="166" scrolling="no" frameborder="no" allow="autoplay"
  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/340929466&color=%23ff5500&auto
  _play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
  </iframe>
 </div>
 
+  <div class = "portion" id = "about">
+    <h2>Our Story</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+
+
 <div class = "portion" id = "videos">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/u7zgZ44ao3Y"
+ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+  picture-in-picture" allowfullscreen></iframe>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UWGlfbiU0mc"
    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
    picture-in-picture" allowfullscreen>
@@ -55,32 +87,15 @@
   picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<div class = "portion" id = "about">
-  <h2>Our Story</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
-
+<div class = "portion">
+<h2>Tour</h2>
 <div>
-
+<p>11/20/18 Crooked Lane, Auburn CA</p>
+<p>12/5/18 Dew Drop Inn, Grass Valley CA</p>
+<p>12/20/18 Pour Choice, Auburn CA</p>
+<p>12/25/18 North Pole, Finland</p>
+</div>
 </div>
 
 <div>
@@ -105,6 +120,7 @@
 <footer>
 <p> Adam R. Lee Design </p>
 </footer>
+
 
 
 </body>
