--- a/index.html
+++ b/index.html
@@ -32,17 +32,10 @@
    </nav>
 </header>
 <div class = "landing">
-<h1>Wolf Creek Boys</h1>
-</div>
-<div class = "portion" id = "music">
-
-<iframe width="50%" height="166" scrolling="no" frameborder="no" allow="autoplay"
- src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/340929466&color=%23ff5500&auto
- _play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
- </iframe>
 </div>
 
   <div class = "portion" id = "about">
+    <div class = "ourStory">
     <h2>Our Story</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -64,6 +57,17 @@
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       <hr />
+</div>
+
+
+<div class = "portion" id = "music">
+   <iframe width="50%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+   src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/340929466&color=%23ff5500&auto
+   _play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+    </iframe>
+  </div>
+
   </div>
 
 
@@ -88,14 +92,17 @@
 </div>
 
 
-<div class = "portion">
+
+<div class = "portion" id = "tour">
+
 <h2>Tour</h2>
-<div>
+<div id="tourDates">
 <p>11/20/18 Crooked Lane, Auburn CA</p>
 <p>12/5/18 Dew Drop Inn, Grass Valley CA</p>
 <p>12/20/18 Pour Choice, Auburn CA</p>
 <p>12/25/18 North Pole, Finland</p>
 </div>
+<hr />
 </div>
 
 <footer>
@@ -104,7 +111,7 @@
 <li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
 <li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
 </ul>
-<p>Contact info: wolfcreekboys@gmail.com</p>
+<h3>Contact info: <a href = "mailto:wolfcreekboys@gmail.com">wolfcreekboys@gmail.com</a></h3>
 
 </footer>
 
