--- a/index.html
+++ b/index.html
@@ -116,12 +116,13 @@
 <li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
 <li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
 <li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
+<li><a href="#" target="_blank"> <i class="fab fa-youtube"></i></a></li>
 </ul>
 <h3>Contact info: <a href = "mailto:wolfcreekboys@gmail.com">wolfcreekboys@gmail.com</a></h3>
 
 </footer>
 
-<footer>
+<footer id="footerTwo">
 <p> Adam R. Lee Design </p>
 </footer>
 
