rearranged nav UX and made all links active and responsive.

--- a/index.html
+++ b/index.html
@@ -11,49 +11,27 @@
 
 <body>
 
-  <!-- Top Navigation Menu -->
+
   <div class="topnav">
     <a href="#home" class="active" id="logo">Wolf Creek Boys</a>
-    <!-- Navigation links (hidden by default) -->
+
     <div id="myLinks">
-      <a href="#news">Music</a>
-      <a href="#contact">Videos</a>
+      <a href="#music">Music</a>
       <a href="#about">About</a>
+      <a href="#videos">Videos</a>
       <a href = "#tour">Tour</a>
-      <a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a>
-      <a href="#" target="_blank"> <i class="fab fa-facebook"></i></a>
-      <a href="#" target="_blank"> <i class="fab fa-instagram"></i></a>
+      <a href="https://soundcloud.com/wolfcreekboys" target="_blank"> <i class="fab fa-soundcloud"></i></a>
+      <a href="https://www.facebook.com/wolfcreekboys/" target="_blank"> <i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/wolf_creek_boys/" target="_blank"> <i class="fab fa-instagram"></i></a>
     </div>
-    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+
     <div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
   </div>
-<!--remove if new nav sufices
-<header>
-  <h1>Wolf Creek Boys</h1>
-  <nav>
-<div>
-  <ul>
-    <li><a href = "#">Music</a></li>
-    <li><a href = "#">Videos</a></li>
-    <li><a href = "#">About</a></li>
-    <li><a href = "#">Tour</a></li>
-  </ul>
-</div>
 
-    <div>
-    <ul>
-      <li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
-      <li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
-      <li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
-    </ul>
-  </div>
-   </nav>
-</header>
--->
 <div class = "landing">
 </div>
 
@@ -135,10 +113,10 @@
 
 <footer>
 <ul>
-<li><a href="#" target="_blank"> <i class="fab fa-instagram"></i></a></li>
-<li><a href="#" target="_blank"> <i class="fab fa-facebook"></i></a></li>
-<li><a href="#" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
-<li><a href="#" target="_blank"> <i class="fab fa-youtube"></i></a></li>
+<li><a href="https://www.instagram.com/wolf_creek_boys/" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+<li><a href="https://www.facebook.com/wolfcreekboys/" target="_blank"> <i class="fab fa-facebook"></i></a></li>
+<li><a href="https://soundcloud.com/wolfcreekboys" target="_blank"> <i class="fab fa-soundcloud"></i></a></li>
+<li><a href="https://www.youtube.com/channel/UC_kTxEurJ3YSCv5WHrlVahw" target="_blank"> <i class="fab fa-youtube"></i></a></li>
 </ul>
 <h3>Contact info: <a href = "mailto:wolfcreekboys@gmail.com">wolfcreekboys@gmail.com</a></h3>
 
