Fixed up about section in stylesheet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
      integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
      crossorigin="anonymous"></script>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
    </head>
 
 <body>
@@ -50,26 +50,23 @@
     <div class = "portion" id = "about">
       <div class = "ourStory">
       <h2>Our Story</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>
+      Wolf Creek Boys are an acoustic duo proudly hailing from Grass Valley, CA;
+      comprised of brothers Mathew and Jerry Sena. Their focus on honest
+      songwriting, as well as a sound that blends Americana influences with
+      their upbringing in the Sierra Nevada foothills, has continued to grow
+      both their live and recorded presence in the northern California music
+      scene.
+    </p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>
+      They’d spent the first few months playing local open mics, but have
+      since moved up to sharing the stage with Chuck Ragan at venues such as the
+       Sierra Nevada Big Room in Chico and Moes Alley in Santa Cruz. The Wolf
+       Creek Boys spent most of 2016 playing shows around California and Nevada
+       to support their first self-titled physical release, and are making plans
+        to continue to tour along the West Coast and beyond.
+    </p>
 
   </div>
 
@@ -126,6 +123,8 @@
 <footer id="footerTwo">
 <p> Adam R. Lee Design </p>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
 /* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
